--- a/HTML/style/styleverify.css
+++ b/HTML/style/styleverify.css
@@ -1,4 +1,6 @@
-/* Div */
+*, *::before, *::after {
+  box-sizing: border-box;
+}
 
 div {
     font-family: "Montserrat", sans-serif;
